# wc

./: wc.cabal
src/: Main.hs
