name:                wc
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/wc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable wc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit >= 1.2.5
                     , conduit-combinators >= 1.0.3
                     , mtl >= 2.2.1
                     , optparse-applicative >= 0.11.0
                     , resourcet >= 1.1.6
                     , text >= 1.2.1.3